style fixes for checkbox and logo size on iOS devices, create version of page where Android is not available, tweak copy, tweak widths and sizes throughout

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -141,7 +141,7 @@ button#onetrust-pc-btn-handler {
             }
         }
         &-logo {
-            width: 9.3rem; // 10.5rem;// 6.25rem;
+            width: 7.75rem; //9.3rem; // 10.5rem;// 6.25rem;
             object-fit: contain;
 
             @include tablet-query {
@@ -324,13 +324,14 @@ button#onetrust-pc-btn-handler {
         padding: 0 0.8rem;
         display: flex;
         flex-flow: row nowrap;
-        align-items:baseline;
     }
     &__checkbox {
+        position: relative;
+        top: -0.7rem;
         margin-right: 0.5rem;
-        vertical-align: bottom;
-        transform: scale(120%);
-        line-height:1.4rem;
+        width: 3rem;
+        height: 3rem;
+        
     }
     &__checkbox-label {
         color: black;
@@ -378,14 +379,19 @@ button#onetrust-pc-btn-handler {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    
-    &--hide { // MAKE SURE THIS IS BELOW 
+    min-width: 18rem;
+    &--hide { 
+    // ENSURE THIS IS BELOW other display declarations so it has precedence
         display: none;
     }
     &-copy {
         text-align: center;
         line-height: 1.4rem;
 
+        &-android-note {
+            // used if android is not available
+            font-family:Arial, Helvetica, sans-serif;
+        }
     }
     &-icons-box {
         display: flex;
